--- a/react-client/src/pages/Homepage/homepage.scss
+++ b/react-client/src/pages/Homepage/homepage.scss
@@ -6,16 +6,16 @@
     // padding: 0px 0px 40px 10px; // top, right, bottom, left
     // padding: 150px 0px 0px 10px;
     // padding: 60px 0px 0px 10px;
-    padding: 40px 0px 40px 10px;
+    padding: 40px 0px 100px 10px;
 
-    h2 {
-        font-size: 2em;
+    h1 {
         // margin: 20px 0;
-        // margin-top: 40px;
+        margin-top: 40px;
         //  margin-top: -100px;
         margin-bottom: -10px;
         padding-left: 20px; // slight padding for genre headers
         color: #FFD700; // Golden color
     }
+
 
 }
